# PAGEINDEX_Vectorless_RAG

./: .env.example  .gitignore  LICENSE  README.md  app.py  make_gif.py  pyproject.toml  requirements-dev.txt  requirements.txt
data/: sample_report.md
examples/: 01_index_document.py  02_query_rag.py  03_interactive_chat.py
src/pageindex_demo/: __init__.py  cli.py  config.py  indexer.py  pipeline.py  retriever.py
src/pageindex_demo/engine/: __init__.py  parser.py  tree_builder.py  tree_utils.py
tests/: conftest.py  test_pipeline.py
