[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pageindex-demo"
version = "0.1.0"
description = "Vectorless RAG — document Q&A without a vector database, inspired by PageIndex"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["rag", "pageindex", "vectorless", "llm", "document-qa", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.83.0",
    "pymupdf>=1.24.0",
    "PyPDF2>=3.0.1",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
pageindex-demo = "pageindex_demo.cli:main"

[project.urls]
"Homepage"    = "https://github.com/YOUR_USERNAME/pageindex-vectorless-rag"
"Bug Tracker" = "https://github.com/YOUR_USERNAME/pageindex-vectorless-rag/issues"

[tool.setuptools.packages.find]
where = ["src"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
